# Ten-Pin-Bowling-Imaging

./: README.md  calib.cpp  pinheader.hpp
Raspberry Pi Code/: CMakeLists.txt  pinheader.hpp  pinstats.cpp
Raspberry Pi Code/release/: CMakeCache.txt  cmake_install.cmake
arduino_code/: Receive.ino
release/: CMakeCache.txt  Makefile  SendReceive.py  calib  cmake_install.cmake  out.txt  pinstats
